--- a/source/_posts/优雅的代码格式.md
+++ b/source/_posts/优雅的代码格式.md
@@ -7,21 +7,16 @@ tags:
     - python
 ---
 
-### 有层次的函数结构
-> 不要为了看起来简洁而放弃看起来一些可有可无的判断。
+### 单例模式的一些写法
 
 ```
     $object = Example::factory()->func();
 ```
 
 ```
-    $object = Example::facory(); 
-    if(!is_object($object)){ //最好在factory里面做异常处理。这里只是举个一般的栗子
+    $object = Example::facory();
+    if(!is_object($object)){
       throw new Exception("is not object");
     }
     $object->func();
-
-
 ```
-
-### 
