--- a/source/_posts/关于性能测试.md
+++ b/source/_posts/关于性能测试.md
@@ -11,3 +11,7 @@ curl -d "m=bigpaygift&p=bigstoregift" "http://tclandlord.boyaagame.com/landlord_
 ```
 
 ### ab测试
+```$xslt
+./ab -n 1 -v 4 -p 'userlogin.txt' -T 'application/x-www-form-urlencoded' 'http://api.xxxxx.com/1/login'
+
+```
