--- a/source/_posts/优雅的代码格式.md
+++ b/source/_posts/优雅的代码格式.md
@@ -20,3 +20,74 @@ tags:
     }
     $object->func();
 ```
+
+### 工厂模式
+
+代码中可以用switch的地方都可以改成工厂模式。
+
+#### 为什么要使用工厂模式
+1.集中化管理。比如你有个日志系统，底层可以用db,file,cache。使用工厂模式可以便于快速切换。
+2.解耦。容器（工厂）不用重构。你只需拓展方法就可以了。
+
+#### 依赖注入(网上找的例子)
+
+超人类似要加工的对象。
+模组类似超人组件
+
+绑定好超人的函数。加入超人方法。
+
+
+```php
+class Container
+{
+    protected $binds;
+
+    protected $instances;
+
+    public function bind($abstract, $concrete)
+    {
+        if ($concrete instanceof Closure) {
+            $this->binds[$abstract] = $concrete;
+        } else {
+            $this->instances[$abstract] = $concrete;
+        }
+    }
+    
+    public function make($abstract, $parameters = [])
+    {
+        if (isset($this->instances[$abstract])) {
+            return $this->instances[$abstract];
+        }
+
+        array_unshift($parameters, $this);
+
+        return call_user_func_array($this->binds[$abstract], $parameters);
+    }
+}
+```
+
+```php
+// 创建一个容器（后面称作超级工厂）
+$container = new Container;
+
+// 向该 超级工厂 添加 超人 的生产脚本  
+$container->bind('superman', function($container, $moduleName) {
+    return new Superman($container->make($moduleName));
+});
+
+// 向该 超级工厂 添加 超能力模组 的生产脚本
+$container->bind('xpower', function($container) {
+    return new XPower;
+});
+
+// 同上
+$container->bind('ultrabomb', function($container) {
+    return new UltraBomb;
+});
+
+// ******************  华丽丽的分割线  **********************
+// 开始启动生产
+$superman_1 = $container->make('superman', 'xpower');
+$superman_2 = $container->make('superman', 'ultrabomb');
+$superman_3 = $container->make('superman', 'xpower');
+```
