--- a/source/_posts/优雅的代码格式.md
+++ b/source/_posts/优雅的代码格式.md
@@ -27,7 +27,7 @@ tags:
 
 #### 为什么要使用工厂模式
 1.集中化管理。比如你有个日志系统，底层可以用db,file,cache。使用工厂模式可以便于快速切换。
-2.解耦。容器（工厂）不用重构。你只需拓展方法就可以了。
+2.解耦。容器（工厂）不用重构。你只需拓展方法就可以了。可扩展性更强。
 
 #### 依赖注入(网上找的例子)
 
@@ -90,4 +90,85 @@ $container->bind('ultrabomb', function($container) {
 $superman_1 = $container->make('superman', 'xpower');
 $superman_2 = $container->make('superman', 'ultrabomb');
 $superman_3 = $container->make('superman', 'xpower');
+```
+
+### 中间件
+关于中间件有两组概念：
+1. 中间件是一种通用接口模型。中间件模式为了统一调用，将子类组合封装起来。
+2. 中间件是一种重用过程。为原来的流程增加筛选或者标记工序。这个也是我下面要解释的。
+
+#### 简单的例子
+成功执行 next1,next2并原封不动返回 request
+```python
+def next1(request):
+	print "next1"
+	return request
+
+def next2(request):
+	print "next2"
+	return request
+
+request = "request"
+pipe = [next2,next1,request]
+
+
+#def xx():
+#	def _xx(x,y):
+#		return x(y)
+#	return _xx
+
+print reduce(lambda x,y:x(y), pipe)
+#print reduce(xx(), pipe)
+
+```
+
+
+#### 稍复杂点的例子
+当组装过后,小闭包组合成了一个大闭包。
+```python
+#!-*-coding=utf-8-*-
+class Next1(object):
+	def handle(self,next,request):
+		print "Next1"
+		return next(request)
+
+class Next2(object):
+	def handle(self,next,request):
+		print "Next2"
+		return next(request)
+
+def firstClosure(callable):
+	def _xx(request):
+		callable(request)
+	return _xx
+
+# 初始化callback
+N1 = Next1()
+N2 = Next2();
+next1 = N1.handle;
+next2 = N2.handle;
+
+
+pipes = [next1,next2]
+
+pipes.append(firstClosure)
+
+pipes.reverse();
+
+def getClosure():
+
+	'''
+	获得一个大的闭包
+	'''
+	def bigClosure(firstClosure,one_pipe):
+		def warp(request):
+			return one_pipe(firstClosure,request)
+		return warp
+	return bigClosure
+
+callable = reduce(getClosure(), pipes)
+
+
+callable("request")
+
 ```
