--- a/source/_posts/计算机常识.md
+++ b/source/_posts/计算机常识.md
@@ -9,3 +9,9 @@ tags:
 1个汉字 == 2个英文 == 2个字节 == 16bit 
 assci码 用7bit表示(2^7=128)
 
+> 这里说的都是最佳压缩情况
+
+*utf-8中文字符占三个字节，GB18030兼容GBK兼容GB2312中文字符占两个字节，ISO8859-1是拉丁字符（ASCII字符）占一个字节*
+
+
+### 
