--- a/source/_posts/优雅的代码格式.md
+++ b/source/_posts/优雅的代码格式.md
@@ -29,6 +29,102 @@ tags:
 1.集中化管理。比如你有个日志系统，底层可以用db,file,cache。使用工厂模式可以便于快速切换。
 2.解耦。容器（工厂）不用重构。你只需拓展方法就可以了。可扩展性更强。
 
+#### 自己导出数据使用过的例子
+初始版本：
+```php
+class Poker{
+
+    public function __construct($sdate,$edate)
+    {
+        $this->stime =  strtotime($sdate);
+        $this->etime = strtotime($edate)+86399;
+    }
+
+
+    /**
+     * 按日导出
+     * @param $callback\
+     */
+    public function export($callback){
+        $stime = $this->stime;
+        $etime = $this->etime;
+       while($stime<=$etime) {
+           call_user_func($callback,$stime);
+           $stime+=86400;
+       }
+    }
+}
+
+/**
+ *  繁体版本场次局数分布状况：level，在该场次玩牌局数为1场的用户数，在该场次玩牌局数为2场的用户数，
+ * 在该场次玩牌局数为3场的用户数……在该场次玩牌局数为50场及以上的用户数
+ */
+function func1(){
+    return function($stime){
+        echo date("Ymd",$stime) ;
+    };
+}
+
+$poker = new Poker("2017-02-06","2017-02-19");
+
+$poker->export(func1());
+```
+改进(添加导出每个操作的初始化，比如初始化csv表头，删除重复的csv等)
+```php
+interface IExport{
+     public function setup();
+     public function teardown();
+     public function handle();
+}
+
+/**
+ *  繁体版本场次局数分布状况：level，在该场次玩牌局数为1场的用户数，在该场次玩牌局数为2场的用户数，
+ * 在该场次玩牌局数为3场的用户数……在该场次玩牌局数为50场及以上的用户数
+ */
+class Export1 implements IExport
+{
+   public function setup(){
+       echo "初始化变量";
+   }
+   public function teardown(){
+        echo "销毁变量";
+   }
+   public function handle(){
+        return function($stime){
+            echo $stime;
+        };
+   }
+}
+    
+class Poker{
+
+    public function __construct($sdate,$edate)
+    {
+        $this->stime =  strtotime($sdate);
+        $this->etime = strtotime($edate)+86399;
+    }
+
+    /**
+     * 按日导出
+     * @param $callback\
+     */
+    public function export(IExport $class){
+        $stime = $this->stime;
+        $etime = $this->etime;
+        $class->setup();
+       while($stime<=$etime) {
+           call_user_func($class->handle(),$stime);
+           $stime+=86400;
+       }
+       $class->teardown();
+    }
+}
+
+$poker = new Poker("2017-02-06","2017-02-19");
+
+$poker->export(new Export1());
+```
+
 #### 依赖注入(网上找的例子)
 
 超人类似要加工的对象。
