--- a/source/_posts/计算机常识.md
+++ b/source/_posts/计算机常识.md
@@ -14,4 +14,16 @@ assci码 用7bit表示(2^7=128)
 *utf-8中文字符占三个字节，GB18030兼容GBK兼容GB2312中文字符占两个字节，ISO8859-1是拉丁字符（ASCII字符）占一个字节*
 
 
-### 
+### https
+ >HTTP>SSL>TCP>IP
+ 
+ 1.下载证书
+ 2.验证证书是否正确。如果正确,利用证书向服务器发送加密的私钥(随机字符串) (非对称加密算法)
+ 3.用私钥解密服务器发来的数据。建立通信。(对称加密)
+ 
+ 关于非对称加密算法的两种加密方式：
+ 1.将明文用公钥加密，只有持有私钥的人才能解开 （数字证书）
+ 2.将明文用私钥加密，发给所有人，告诉所有人这段消息是我发的。（签名）
+ 
+ 
+ 
