--- a/source/_posts/优雅的代码格式.md
+++ b/source/_posts/优雅的代码格式.md
@@ -268,3 +268,19 @@ callable = reduce(getClosure(), pipes)
 callable("request")
 
 ```
+
+
+### 巧用回调
+#### 利用回调来解耦
+请求第三方服务。如果成功,第三方调用服务器给你的方法。
+
+
+#### 异步回调
+IO,网络,等待耗时等特殊场景常用异步来解决。
+1.场景1
+同时获取多个网站数据。对返回的数据进行处理。
+
+#### 自定义方法
+1.场景1 
+>这个要注意安全问题。
+array_reduce
