--- a/source/_posts/计算机常识.md
+++ b/source/_posts/计算机常识.md
@@ -25,5 +25,36 @@ assci码 用7bit表示(2^7=128)
  1.将明文用公钥加密，只有持有私钥的人才能解开 （数字证书）
  2.将明文用私钥加密，发给所有人，告诉所有人这段消息是我发的。（签名）
  
- 
- 
+### CLASS DIAGRAM
+#### 类的基本表示方式
+基本的表示方式
+```uml
++ price : decimal
+```
+
+>类
+>> 属性
+>>> 私有属性  -
+>>> 保护属性 #
+>>> 公有属性 +
+>>> 类常量 
+>>> 类变量 下划线
+
+>> 私有
+>>> 私有方法 -
+>>> 保护方法 #
+>>> 公共方法 +
+>>> 类方法 _
+
+类的关系
+
+继承类 
+
+继承接口
+组合
+聚合
+依赖 
+单向关联(A使用了B类 商品<----订单,添加商品到订单)
+双向关联(互相使用。)
+自身关联
+多维关联
