--- a/source/_posts/优雅的代码格式.md
+++ b/source/_posts/优雅的代码格式.md
@@ -284,3 +284,14 @@ IO,网络,等待耗时等特殊场景常用异步来解决。
 1.场景1 
 >这个要注意安全问题。
 array_reduce
+
+
+### 观察者模式
+
+A1：观察者 
+A2: 观察者
+B: 主题
+
+在B中注册观察者A1,A2，当B有改变时通知A1,A2 执行update()
+
+优势：解耦：观察者update自定义，不用写在主题逻辑里面。方便扩展：添加观察者简单。不用修改主题。
